[package]
edition = "2021"
name = "baobab"
version = "0.1.0"
license = "AGPL 3"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.68"
async-std = "1.12.0"
async-trait = "0.1.77"
crossbeam-channel = "0.5.6"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.14.1", default-features = false, features = [
  "async",
  "napi8",
] }
futures = "0.3.30"
napi-derive = "2.14.2"
gstreamer = "0.19.5"
gstreamer-video = "0.16"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.38"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4.2"
tokio-tungstenite = "*"
tracing = "0.1.37"
tracing-futures = "0.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
terrors = "0.2.6"

[dev-dependencies]
tracing-gstreamer = "0.5.0"
tracing-tracy = "0.10.2"

[build-dependencies]
napi-build = "2.1.0"
